--- a/index.html
+++ b/index.html
@@ -13,157 +13,153 @@
     html, body {
       margin: 0;
       height: 100%;
-      overflow: hidden; /* 🚫 禁止滚动条 */
-      touch-action: none; /* 🚫 禁止触摸滑动 */
+      overflow: hidden; /* 禁止滚动 */
+      touch-action: none;
       font-family: "Microsoft YaHei", "Helvetica Neue", Arial, sans-serif;
-      background: radial-gradient(circle at 30% 30%, #f6f8fb, #dfe3eb);
+      background: linear-gradient(135deg, #0a0f1a, #162238, #1f2f4d);
       display: flex;
       justify-content: center;
       align-items: center;
-      -webkit-overflow-scrolling: none;
+      color: #fff;
     }
 
+    /* 半透明卡片区域 */
     .container {
-      background: #ffffff;
-      border-radius: 20px;
-      padding: 50px 45px;
-      width: 90%;
+      width: 95%;
       max-width: 520px;
-      box-shadow:
-        0 12px 28px rgba(0, 0, 0, 0.08),
-        0 4px 12px rgba(0, 0, 0, 0.04);
+      background: rgba(255, 255, 255, 0.08);
+      border-radius: 18px;
+      padding: 45px 40px;
+      box-shadow: 0 20px 40px rgba(0, 0, 0, 0.4);
+      backdrop-filter: blur(16px);
+      border: 1px solid rgba(255, 255, 255, 0.15);
       text-align: center;
       animation: fadeIn 0.8s ease-out;
-      max-height: 90vh; /* 防止手机键盘顶起 */
-      overflow: hidden;
     }
 
     @keyframes fadeIn {
-      from { opacity: 0; transform: translateY(15px); }
+      from { opacity: 0; transform: translateY(20px); }
       to { opacity: 1; transform: translateY(0); }
     }
 
+    /* 表头标题 */
     h2 {
-      font-size: 26px;
-      color: #0d47a1;
+      font-size: 28px;
+      margin-bottom: 35px;
       font-weight: 700;
+      background: linear-gradient(90deg, #00c3ff, #007bff);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
       letter-spacing: 0.5px;
-      margin-bottom: 25px;
     }
 
     h2::after {
       content: "";
       display: block;
-      width: 60px;
+      width: 70px;
       height: 3px;
-      background: linear-gradient(90deg, #007bff, #00b4ff);
-      margin: 10px auto 0;
-      border-radius: 2px;
+      background: linear-gradient(90deg, #00bfff, #007bff);
+      margin: 14px auto 0;
+      border-radius: 3px;
     }
 
     label {
       display: block;
       text-align: left;
-      margin-top: 14px;
+      margin-top: 20px;
       font-size: 15px;
       font-weight: 600;
-      color: #333;
+      color: #cfd7e6;
     }
 
     select, textarea, input[type="file"] {
       width: 100%;
-      border: 1px solid #d0d7e2;
+      border: none;
       border-radius: 10px;
-      padding: 12px 13px;
-      margin-top: 6px;
+      padding: 14px;
+      margin-top: 8px;
       font-size: 15px;
-      background-color: #fafbfc;
-      transition: all 0.2s ease;
+      background: rgba(255, 255, 255, 0.1);
+      color: #fff;
+      outline: none;
+      transition: 0.3s ease;
     }
 
-    select:focus, textarea:focus, input[type="file"]:focus {
-      outline: none;
-      border-color: #007bff;
-      box-shadow: 0 0 6px rgba(0, 123, 255, 0.2);
-      background-color: #fff;
+    select:focus, textarea:focus {
+      background: rgba(255, 255, 255, 0.18);
+      box-shadow: 0 0 6px rgba(0, 180, 255, 0.4);
     }
 
     textarea {
       resize: none;
-      height: 120px;
+      height: 130px;
       line-height: 1.6;
     }
 
     input[type="file"] {
       cursor: pointer;
       font-size: 14px;
+      color: #ccc;
     }
 
     input[type="file"]::-webkit-file-upload-button {
-      background-color: #007bff;
+      background: linear-gradient(90deg, #007bff, #00aaff);
       color: #fff;
       border: none;
-      padding: 8px 16px;
+      padding: 9px 18px;
       border-radius: 8px;
       cursor: pointer;
       font-weight: 600;
-      transition: background 0.3s;
+      transition: 0.3s;
     }
 
     input[type="file"]::-webkit-file-upload-button:hover {
-      background-color: #0056b3;
+      background: linear-gradient(90deg, #0060cc, #0094ff);
     }
 
     button {
-      margin-top: 22px;
+      margin-top: 30px;
       width: 100%;
-      padding: 14px;
+      padding: 15px;
       font-size: 16px;
       font-weight: 700;
-      color: #fff;
       border: none;
       border-radius: 10px;
-      background: linear-gradient(90deg, #007bff, #0066cc);
+      color: #fff;
+      background: linear-gradient(90deg, #00b4ff, #007bff);
       cursor: pointer;
       transition: all 0.3s ease;
-      box-shadow: 0 4px 12px rgba(0, 123, 255, 0.25);
+      box-shadow: 0 6px 18px rgba(0, 123, 255, 0.3);
     }
 
     button:hover {
-      background: linear-gradient(90deg, #0059b3, #004c99);
+      background: linear-gradient(90deg, #0090e0, #005ecb);
       transform: translateY(-2px);
-      box-shadow: 0 6px 15px rgba(0, 123, 255, 0.3);
     }
 
     footer {
-      margin-top: 18px;
+      margin-top: 25px;
       text-align: center;
-      color: #777;
-      font-size: 12px;
-      border-top: 1px solid #eee;
-      padding-top: 10px;
+      color: #aab4c4;
+      font-size: 13px;
+      border-top: 1px solid rgba(255, 255, 255, 0.1);
+      padding-top: 14px;
     }
 
+    /* 手机适配 */
     @media (max-width: 600px) {
       .container {
-        padding: 28px 22px;
+        padding: 32px 26px;
         border-radius: 14px;
       }
-
       h2 {
-        font-size: 22px;
+        font-size: 24px;
       }
-
       label {
         font-size: 14px;
       }
-
       select, textarea, input[type="file"], button {
         font-size: 14px;
-      }
-
-      footer {
-        font-size: 11px;
       }
     }
   </style>
@@ -194,10 +190,7 @@
   </div>
 
   <script>
-    // 禁止页面滚动（针对移动端触摸）
-    document.body.addEventListener('touchmove', function (e) {
-      e.preventDefault();
-    }, { passive: false });
+    document.body.addEventListener('touchmove', e => e.preventDefault(), { passive: false });
 
     (function() {
       emailjs.init('Vf3g58_uwsuIfMxCI');
