--- a/index.html
+++ b/index.html
@@ -39,7 +39,6 @@
       to { opacity: 1; transform: translateY(0); }
     }
 
-    /* 标题样式 */
     .title {
       display: flex;
       align-items: center;
@@ -51,7 +50,7 @@
     .title svg {
       width: 28px;
       height: 28px;
-      fill: white; /* 白色信封 */
+      fill: white;
     }
 
     h2 {
@@ -156,23 +155,12 @@
       border-top: 1px solid rgba(255, 255, 255, 0.1);
       padding-top: 14px;
     }
-
-    @media (max-width: 600px) {
-      .container {
-        padding: 32px 26px;
-        border-radius: 14px;
-      }
-      h2 {
-        font-size: 22px;
-      }
-    }
   </style>
 </head>
 
 <body>
   <div class="container">
     <div class="title">
-      <!-- 白色信封 SVG 图标 -->
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M2 4a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h20a2 2 0 0 0 2-2V6a2 2 0 0 0-2-2H2zm0 2h20v.511L12 13 2 6.511V6zm0 2.311L8.803 12.5 2 17.189V8.311zM22 8.311v8.878L15.197 12.5 22 8.311zM3.236 18l6.682-4.786L12 15.875l2.082-1.661L20.764 18H3.236z"/></svg>
       <h2>联信资匿名意见箱</h2>
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M2 4a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h20a2 2 0 0 0 2-2V6a2 2 0 0 0-2-2H2zm0 2h20v.511L12 13 2 6.511V6zm0 2.311L8.803 12.5 2 17.189V8.311zM22 8.311v8.878L15.197 12.5 22 8.311zM3.236 18l6.682-4.786L12 15.875l2.082-1.661L20.764 18H3.236z"/></svg>
@@ -200,11 +188,12 @@
   </div>
 
   <script>
-    document.body.addEventListener('touchmove', e => e.preventDefault(), { passive: false });
+    // ⚡ EmailJS 初始化提前执行
+    document.addEventListener("DOMContentLoaded", function() {
+      emailjs.init("Vf3g58_uwsuIfMxCI");
+    });
 
-    (function() {
-      emailjs.init('Vf3g58_uwsuIfMxCI');
-    })();
+    document.body.addEventListener('touchmove', e => e.preventDefault(), { passive: false });
 
     document.getElementById('feedbackForm').addEventListener('submit', async function(event) {
       event.preventDefault();
@@ -244,24 +233,20 @@
       }
 
       const templateParams = {
-        subject: '联信资匿名意见箱 - ' + category + '（' + timestamp + '）',
-        to_email: 'lianxinzi2025@outlook.com',
-        category: category,
+        category,
         message: message + '\n\n📅 提交时间：' + timestamp + '\n🖼 查看图片：' + imageLink,
         image: imageLink
       };
 
-      emailjs.send('service_0nbyy1m', 'template_la7d6sb', templateParams)
-        .then(() => {
-          alert('✅ 感谢您的匿名反馈，我们已收到！');
-          document.getElementById('feedbackForm').reset();
-        })
-        .catch(error => {
-          alert('❌ 发送失败，请稍后再试。');
-          console.error('EmailJS 错误：', error);
-        });
+      try {
+        await emailjs.send('service_0nbyy1m', 'template_la7d6sb', templateParams);
+        alert('✅ 感谢您的匿名反馈，我们已收到！');
+        document.getElementById('feedbackForm').reset();
+      } catch (error) {
+        alert('❌ 发送失败，请检查 EmailJS 设置或稍后再试。');
+        console.error('EmailJS 错误：', error);
+      }
     });
   </script>
 </body>
 </html>
-
