--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-  <title>联信资匿名意见箱</title>
+  <title>📧 联信资匿名意见箱 📧</title>
   <script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
+
   <style>
     * {
       box-sizing: border-box;
@@ -13,29 +14,24 @@
     html, body {
       margin: 0;
       height: 100%;
-      overflow: hidden; /* 🚫 禁止滚动条 */
+      overflow: hidden; /* 🚫 禁止滚动 */
       touch-action: none; /* 🚫 禁止触摸滑动 */
       font-family: "Microsoft YaHei", "Helvetica Neue", Arial, sans-serif;
-      background: radial-gradient(circle at 30% 30%, #f6f8fb, #dfe3eb);
+      background: linear-gradient(135deg, #dce9ff 0%, #f0e6ff 50%, #fff3e0 100%);
       display: flex;
       justify-content: center;
       align-items: center;
-      -webkit-overflow-scrolling: none;
     }
 
     .container {
-      background: #ffffff;
+      background: rgba(255, 255, 255, 0.96);
       border-radius: 20px;
-      padding: 50px 45px;
+      padding: 45px 40px;
       width: 90%;
       max-width: 520px;
-      box-shadow:
-        0 12px 28px rgba(0, 0, 0, 0.08),
-        0 4px 12px rgba(0, 0, 0, 0.04);
+      box-shadow: 0 10px 35px rgba(0, 0, 0, 0.12);
       text-align: center;
       animation: fadeIn 0.8s ease-out;
-      max-height: 90vh; /* 防止手机键盘顶起 */
-      overflow: hidden;
     }
 
     @keyframes fadeIn {
@@ -44,70 +40,55 @@
     }
 
     h2 {
-      font-size: 26px;
+      font-size: 28px;
       color: #0d47a1;
-      font-weight: 700;
-      letter-spacing: 0.5px;
-      margin-bottom: 25px;
-    }
-
-    h2::after {
-      content: "";
-      display: block;
-      width: 60px;
-      height: 3px;
-      background: linear-gradient(90deg, #007bff, #00b4ff);
-      margin: 10px auto 0;
-      border-radius: 2px;
+      font-weight: 800;
+      letter-spacing: 1px;
+      margin-bottom: 30px;
     }
 
     label {
       display: block;
       text-align: left;
-      margin-top: 14px;
-      font-size: 15px;
+      margin-top: 18px;
+      font-size: 16px;
       font-weight: 600;
-      color: #333;
+      color: #222;
     }
 
     select, textarea, input[type="file"] {
       width: 100%;
       border: 1px solid #d0d7e2;
       border-radius: 10px;
-      padding: 12px 13px;
+      padding: 14px;
       margin-top: 6px;
       font-size: 15px;
-      background-color: #fafbfc;
-      transition: all 0.2s ease;
+      background-color: #f9fafc;
+      transition: 0.3s;
     }
 
     select:focus, textarea:focus, input[type="file"]:focus {
       outline: none;
       border-color: #007bff;
-      box-shadow: 0 0 6px rgba(0, 123, 255, 0.2);
+      box-shadow: 0 0 8px rgba(0, 123, 255, 0.3);
       background-color: #fff;
     }
 
     textarea {
       resize: none;
-      height: 120px;
+      height: 130px;
       line-height: 1.6;
-    }
-
-    input[type="file"] {
-      cursor: pointer;
-      font-size: 14px;
     }
 
     input[type="file"]::-webkit-file-upload-button {
       background-color: #007bff;
       color: #fff;
       border: none;
-      padding: 8px 16px;
+      padding: 9px 16px;
       border-radius: 8px;
       cursor: pointer;
       font-weight: 600;
-      transition: background 0.3s;
+      transition: 0.3s;
     }
 
     input[type="file"]::-webkit-file-upload-button:hover {
@@ -115,56 +96,41 @@
     }
 
     button {
-      margin-top: 22px;
+      margin-top: 28px;
       width: 100%;
-      padding: 14px;
-      font-size: 16px;
+      padding: 15px;
+      font-size: 17px;
       font-weight: 700;
       color: #fff;
       border: none;
       border-radius: 10px;
       background: linear-gradient(90deg, #007bff, #0066cc);
       cursor: pointer;
-      transition: all 0.3s ease;
-      box-shadow: 0 4px 12px rgba(0, 123, 255, 0.25);
+      transition: 0.3s;
+      box-shadow: 0 4px 15px rgba(0, 123, 255, 0.3);
     }
 
     button:hover {
       background: linear-gradient(90deg, #0059b3, #004c99);
       transform: translateY(-2px);
-      box-shadow: 0 6px 15px rgba(0, 123, 255, 0.3);
+      box-shadow: 0 6px 18px rgba(0, 123, 255, 0.4);
     }
 
     footer {
-      margin-top: 18px;
+      margin-top: 22px;
       text-align: center;
-      color: #777;
-      font-size: 12px;
+      color: #666;
+      font-size: 13px;
       border-top: 1px solid #eee;
-      padding-top: 10px;
+      padding-top: 12px;
     }
 
     @media (max-width: 600px) {
       .container {
-        padding: 28px 22px;
-        border-radius: 14px;
+        padding: 30px 25px;
+        border-radius: 16px;
       }
-
-      h2 {
-        font-size: 22px;
-      }
-
-      label {
-        font-size: 14px;
-      }
-
-      select, textarea, input[type="file"], button {
-        font-size: 14px;
-      }
-
-      footer {
-        font-size: 11px;
-      }
+      h2 { font-size: 24px; }
     }
   </style>
 </head>
@@ -190,15 +156,10 @@
 
       <button type="submit">提交匿名意见</button>
     </form>
-    <footer>© 2025 联信资 | Trust Union Limited</footer>
+    <footer>您的意见将被严格保密，仅用于改进与优化工作。</footer>
   </div>
 
   <script>
-    // 禁止页面滚动（针对移动端触摸）
-    document.body.addEventListener('touchmove', function (e) {
-      e.preventDefault();
-    }, { passive: false });
-
     (function() {
       emailjs.init('Vf3g58_uwsuIfMxCI');
     })();
@@ -240,9 +201,8 @@
         }
       }
 
+      // ✅ 修正版 — 只传 EmailJS 模板定义的变量
       const templateParams = {
-        subject: '联信资匿名意见箱 - ' + category + '（' + timestamp + '）',
-        to_email: 'lianxinzi2025@outlook.com',
         category: category,
         message: message + '\n\n📅 提交时间：' + timestamp + '\n🖼 查看图片：' + imageLink,
         image: imageLink
@@ -261,5 +221,3 @@
   </script>
 </body>
 </html>
-
-
